# multi_jackal_amcl

./: README.md
Astar/: CMakeLists.txt
Astar/launch/: astar_amcl.launch
Astar/maps/: capstone_maze.pgm  capstone_maze.yaml  capstone_stuff.pgm  capstone_stuff.yaml  empty.pgm  hhmi_merged.pgm  hhmi_merged.yaml  hospital.yaml  raceworld.pgm  raceworld.yaml  simple2.pgm  simple2.yaml  stuff.pgm  stuff.yaml  stuff3.pgm  stuff3.yaml
Astar/rviz/: astar.rviz
Astar/src/: main_capstone.cpp
multi_jackal_base/: package.xml
multi_jackal_base/launch/: jackal_base.launch
multi_jackal_control/: package.xml
multi_jackal_description/: package.xml
multi_jackal_description/launch/: jackal_description.launch
multi_jackal_description/scripts/: translate_frame_id.py
multi_jackal_description/urdf/: accessories.urdf.xacro  jackal.urdf.xacro
multi_jackal_description/urdf/accessories/: sick_lms1xx_mount.urdf.xacro
multi_jackal_nav/: package.xml
multi_jackal_nav/launch/: amcl_jackal0.launch  jackal_nav.launch  multi_amcl.launch  multi_gmapping.launch
multi_jackal_tutorials/: CMakeLists.txt  package.xml
multi_jackal_tutorials/configs/: example.yaml
multi_jackal_tutorials/launch/: one_jackal_camera.launch  three_jackal.launch  two_jackal.launch  two_jackal_amcl.launch  two_jackal_astar.launch
multi_jackal_tutorials/rviz/: two_jackal.rviz  two_jackal_amcl.rviz
multi_jackal_tutorials/scripts/: final_mtsp.ipynb  multi-apf-jackal-astar.py  path_listener.py  paths_run_astar.py  potential_field_class.py  pub_string_example.py  publish_global_pose.py  run_astar_amcl.py  visualize_path.py
multi_jackal_tutorials/scripts/Archive/: multi-apf-jackal.py
multi_jackal_tutorials/src/: explore_robot.cpp  odom_transformer.cpp
multi_jackal_tutorials/worlds/: clutteredEnvironment.world
