########### 
cmake_minimum_required(VERSION 2.8.3)
set(CMAKE_CXX_STANDARD 14)

########### 
project(astar)

###########
find_package(OpenCV REQUIRED)

find_package(catkin REQUIRED COMPONENTS
        roscpp
        rospy
        geometry_msgs
        nav_msgs
        tf
        )

catkin_package()

###########
include_directories(
        include
        ${catkin_INCLUDE_DIRS}
)

########### 
add_executable(${PROJECT_NAME} src/main.cpp src/Astar.cpp src/OccMapTransform.cpp)
target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${OpenCV_LIBS})

add_executable(test_astar src/main_capstone.cpp src/Astar.cpp src/OccMapTransform.cpp)
target_link_libraries(test_astar ${catkin_LIBRARIES} ${OpenCV_LIBS})